damage skulls opacity reduced beyond max

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -1,4 +1,4 @@
-<!--2/29/20' set sheet version manually with currentVersion in sheetworkers-->
+<!--3/1/20 set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -17,13 +17,14 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">2/29/20'</span>
+        <span class="footer">3/1/20</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
             <span>v1.63</span>
             <li>Added a toggleable 2nd row to each skill.</li>
             <li>Added Artifact dice, Misc Skill modifier, and Notes to each skill.</li>
-            <li>Updated the roll template for Skill rolls.</li>
-            <li>Added Misc Skill modifier to monster strength-based skills.</li>
+            <li>Updated the roll template for skill rolls.</li>
+            <li>Added Misc Skill modifier to strength-based monster skills.</li>
+            <li>Visual enhancement; reduced the opacity of damage skulls that are beyond the character's max value.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
@@ -44,7 +45,7 @@
                 <li>refinements to the roll template.</li>
                 <li>coming soon; 1. Change armor/shield Misc modifier to adjust Skill dice instead of Gear dice. 2. Skills will get a Misc field and artifact dice.</li>
 
-                <span>v1.60</span>                
+                <span>v1.60</span>
                 <li>added an attribute for 'willpower_max'. Now you track willpower using a linked token bar.</li>
                 <li>small updates to roll templates; removed whitespace for empty elements, adjusted the show/hide logic to better work with custom macros.</li>
                 <li>updated the Reputation roll to use Age + Reputation.</li>
@@ -53,80 +54,6 @@
                 <li>added columns for misc attack and damage bonuses, skill total, attack total, and damage total.</li>
                 <li>added artifact dice (d8, d8, d10, d12) to weapons, armor, and shield that add artifact dice to the dice pool.</li>
                 <li>added an expandable 2nd row to weapons, armor, and shield to show/hide additional attributes.</li>
-
-                <span>v1.59</span>
-                <li>Fixed Shield Parry and Shove bug introduced in the last update.</li>
-                <li>Changed weapon Max bonus to a selector 0-12. Reminder that this is the weapon's UNDAMAGED bonus. Make sure to adjust the weapon's Bonus attribute to account for a broken state.</li>
-
-                <span>v1.58</span>
-                <li>added a Settings tab.</li>
-                <li>added global whisper options for the sheet as well as the API roller (@{whisper_option} and
-                    @{whisper_option_api}).</li>
-                <li>added a "Parry" roll(dice pool preset) to repeating weapons.</li>
-                <li>added a Pride roll that rolls a Legendary d12 and displays the character's pride.</li>
-                <li>added borders/backgrounds similar to the Forbidden Lands style/theme.</li>
-                <li>added title text to each condition.</li>
-                <li>fixed a bug in the "Clear Dice Pool" that sometimes left dice in the pool.</li>
-                <li><b>Note:</b> Strength entered on the Monster tab(up to 48) is also shared on the Character tab. This
-                    effects strength-based skills, carry, weapons, etc. on the Character tab. If the sheet is a Monster,
-                    <b>use the Monster tab only</b>. If the sheet is a Character, <b>use the Character tab only</b>. If you
-                    must use both the Character and Monster tabs, simply adjust your dice pools accordingly.</li>
-
-                <span>v1.57</span>
-                <li>"Dice Only" tab has been removed.</li>
-                <li>Monster skills that are "strength-based" now have their own attributes on the monster tab's listed
-                    skills. (crafting_monster, endurance_monster melee_monster, and might_monster) This will allow the
-                    GM to enter a value 0-12 of base dice that will be used to update the dice pool when selected.</li>
-                <li>Added additional damage tracking (toggleable feature &#9658;) for Monster's up to Strength 48.
-                    <i>Here be Dragons...</i></li>
-                <li>Max values for primary attributes are equal to the primary attribute value(auto-calculated). ie
-                    strength_tolal_max = strength. This can be useful for tracking the current attribute value using a
-                    token bar/bubble. Example; linking strength_total will use the max value of strength_total|max.</li>
-
-                <span>v1.56</span>
-                <li>fixed a bug that capped Base dice in the Dice Pool at "6" instead of "12" and rolled 6 extra Base
-                    dice for all rolls.</li>
-
-                <span>v1.55</span>
-                <li>fixed missing sheetworker translation code(weapon, spell, push query, etc.)</li>
-                <li>optimized sheetworker code(Thank you GiGs).</li>
-                <li>small adjustments to the roll template's layout.</li>
-
-                <span>v1.54</span>
-                <li>added total cost to Hirelings on the Stronghold page.</li>
-                <li>added better title text to all action rolls to remind users to use the 'Roll' button to roll the
-                    dice.</li>
-                <li>updated the dice pool with column colors for the types of dice and made the 'Roll' button more
-                    prominent.</li>
-                <li>fixed the sheet and roll template borders to display correctly in FF and Chrome.</li>
-                <li>added missing translation data for the roll template for Consumable rolls.</li>
-                <li>updated the wording used for the 'Push' button roll query and included translation data.</li>
-
-                <span>v1.53</span>
-                <li>added a new "Announcements" section (just click the version number upper right under FL logo). As
-                    new sheet versions are released, the announcements section will be displayed.</li>
-                <li>swapped Rating and Dmg column to better portray "Rating - Dmg = Total" Trying to prevent adding
-                    operators to the layout unless they are needed...?</li>
-                <li>added sub-totals for Gear, Weapons, Armor, and Coins Carried to the bottom of the Gear section.</li>
-                <li>added new action buttons to the Shield section for "Parry" and "Shove".</li>
-                <li>added Total to shield @{shield1_bonus_total}</li>
-                <li>added "Don" to shields. If unchecked, Shield Parry/Shove; gear dice = "0"</li>
-                <li>added a "Weight" and "Carried" fields for armor, shield, and weapons "Carried" selector includes
-                    "Yes", "No", or "Mount". (NOTE: these newly added attributes are set to not carried by default to
-                    prevent being included twice for encumbrance. Please verify that any Weapons, Armor, and Shield
-                    weight is only being included in whichever location works best for you.) No and Mount will remove
-                    the items weight from the Character's encumbrance. Items located on the mount should also be listed
-                    as Mount's Gear or as gear included with the new repeating Beasts section.</li>
-                <li>added Wt and Carr and Features to Weapons, Armor and Shield sections.</li>
-                <li>added a new repeating section for "Beasts" (pack animals) A beast's Carry is based on it's STR and
-                    the mounted condition. Encumbrance needs to be manually entered for any Item(s) weight of gear
-                    included in the Notes textarea.</li>
-                <li>added a Monster tab which includes an expanded Strength/Damage section, monster attacks, etc. Most
-                    sheet attributes are the same regardless if you are viewing the character or monster tab. To track a
-                    Monster's <b>current</b> Strength, use @{strength_total} for token bar settings.
-                    @{strength_total_max} is equal to @{strength} fyi: all four attributes are set similarity.</li>
-                <li>added Willpower checkboxes</li>
-                <li>small layout changes/tweaks to the sheet and roll templates</li>
             </ol>
         </span>
         <input type="checkbox" class="announcements-show" name="attr_show_announcements" value="1" data-i18n-title="close-announcements" title="Close Announcements" style="margin: .5em -.75em 0 0;position: relative;" />
@@ -208,6 +135,7 @@
                     <input class="input-number broken-str toggle-monster-only" type="number" name="attr_strength_pc" value="0" min="0" max="6" title="@{strength_pc}" />
                 </div>
                 <div class="attributes-box4">
+                    <input class="sheet-broken-str" type="hidden" name="attr_strength" />
                     <input type="radio" name="attr_damage" value="0" style="margin: 4px 8px 3px 2px;" data-i18n-title="no-damage" title="No Damage" checked />
                     <input class="skull" type="radio" name="attr_damage" value="1" title="1 @{damage}" /><span></span>
                     <input class="skull" type="radio" name="attr_damage" value="2" title="2 @{damage}" /><span></span>
@@ -276,6 +204,7 @@
                     <input class="input-number broken-agi" type="number" name="attr_agility" value="0" min="0" title="@{agility}" />
                 </div>
                 <div class="attributes-box8">
+                    <input class="sheet-broken-agi" type="hidden" name="attr_agility" />
                     <input type="radio" name="attr_fatigue" value="0" style="margin: 4px 8px 3px 2px;" data-i18n-title="no-damage" title="No Damage" checked />
                     <input class="skull" type="radio" name="attr_fatigue" value="1" title="1 @{fatigue}" /><span></span>
                     <input class="skull" type="radio" name="attr_fatigue" value="2" title="2 @{fatigue}" /><span></span>
@@ -293,6 +222,7 @@
                     <input class="input-number broken-wit" type="number" name="attr_wits" value="0" min="0" title="@{wits}" />
                 </div>
                 <div class="attributes-box12">
+                    <input class="sheet-broken-wit" type="hidden" name="attr_wits" />
                     <input type="radio" name="attr_confusion" value="0" style="margin: 4px 8px 3px 2px;" data-i18n-title="no-damage" title="No Damage" checked />
                     <input class="skull" type="radio" name="attr_confusion" value="1" title="1 @{confusion}" /><span></span>
                     <input class="skull" type="radio" name="attr_confusion" value="2" title="2 @{confusion}" /><span></span>
@@ -310,6 +240,7 @@
                     <input class="input-number broken-emp" type="number" name="attr_empathy" value="0" min="0" title="@{empathy}" />
                 </div>
                 <div class="attributes-box16">
+                    <input class="sheet-broken-emp" type="hidden" name="attr_empathy" />
                     <input type="radio" name="attr_doubt" value="0" style="margin: 4px 8px 3px 2px;" data-i18n-title="no-damage" title="No Damage" checked />
                     <input class="skull" type="radio" name="attr_doubt" value="1" title="1 @{doubt}" /><span></span>
                     <input class="skull" type="radio" name="attr_doubt" value="2" title="2 @{doubt}" /><span></span>
