[GURPS] v2.2.3 Bug fuxes, Cosmetic changes: GURPS.html, GURPS.css
Added some new ToolTips – Cosmetic Only.
	Changed width of Weapon and Damage Notes fields, under Melee and Raged Attacks, to be more readable – Cosmetic Only

--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -24,10 +24,8 @@
 			<div class="content">
 				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 				<ul>
-					<li>Fix spelling errors.</li>
-					<li>Rolltemplate: To avoid confusion, critical failure will only display the critical failure not.</li>
-					<li>Traits tab: Combine Perks & Quirks into one row. Less scrolling and hopefully improved interface.</li>
-					<li>General tab: Move lifting section below HP, ER Pools, expand notes section. <b>NOTE:</b> This required changing the coding location of several sections on this tab.</li>
+					<li>Added some new ToolTips – Cosmetic Only.</li>
+					<li>Changed width of Weapon and Damage Notes fields, under Melee and Raged Attacks, to be more readable – Cosmetic Only.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -2956,9 +2954,26 @@
 							PTS = 3, 6, 12, 24, 36, etc.
 						</span>
 					</div>
-					<div class="sheet-cell sheet-col6">Mod</div>
+					<div class="sheet-cell sheet-col6">
+						<div class="popup">MOD</div>
+						<div class="tooltip tooltip-skills-ref">
+							Modifier applied to skill level.<br />
+							Can be a positive or a negative number.<br />
+							Examples include a bonus from a Talent,<br />
+							default from another Skill or Technique,<br />
+							a piece of equipment, or a Perk.
+						</div>
+					</div>
 					<div class="sheet-cell sheet-col7">Pts</div>
-					<div class="sheet-cell sheet-col8">Ref</div>
+					<div class="sheet-cell sheet-col8">
+						<div class="popup">Ref</div>
+						<div class="tooltip tooltip-skills-ref">
+							Reference to book and page numbers.<br />
+							Examples:<br />
+							B238 = GURPS Basic, Page 238<br />
+							PU2:126 = Power-Ups 2. Page 126<br />
+						</div>
+					</div>
 				</div> <!-- .sheet-header -->
 				<fieldset class="repeating_skills">
 				    <input class="toggle-highlight" type="checkbox" name="attr_highlight" />
@@ -3067,7 +3082,9 @@
             						<span class="sheet-tooltip">
             						    Success, critical success, fail, and critical fail<br />
             						    notes will be added to roll results.<br />
-            						    You can add macros to these notes.
+            						    You can add macros to these notes.<br />
+										The width of these note boxes are set to help you<br />
+										visualize what it will look like in chat.
             						</span>
     						    </div>
 						        <textarea name="attr_skill_success_note" title="Macro table name: repeating_skills. Field name: skill_success_note"></textarea>
@@ -3218,16 +3235,27 @@
 						</span>
 					</div>
 					<div class="cell col6">
-					    <div class="sheet-popup">Mod</div>
-						<span class="sheet-tooltip">
-							Modifiers. i.e. a bonus from a Talent,<br />
-							Equipment, Perk, etc.
-						</span>    
+					    <div class="sheet-popup">MOD</div>
+						<div class="tooltip tooltip-tech-ref">
+							Modifier applied to skill level.<br />
+							Can be a positive or a negative number.<br />
+							Examples include a bonus from a Talent,<br />
+							default from another Skill or Technique,<br />
+							a piece of equipment, or a Perk.
+						</div>    
 					</div>
 					<div class="cell col7">Pts</div>
 					<div class="cell col8">Level</div>
 					<div class="cell col9"></div>
-					<div class="cell col10">Ref</div>
+					<div class="sheet-cell sheet-col10">
+						<div class="popup">Ref</div>
+						<div class="tooltip tooltip-tech-ref">
+							Reference to book and page numbers.<br />
+							Examples:<br />
+							B238 = GURPS Basic, Page 238<br />
+							PU2:126 = Power-Ups 2. Page 126<br />
+						</div>
+					</div>
 				</div> <!-- .header -->
 				<fieldset class="repeating_techniquesrevised">
 					<input class="toggle" type="checkbox" title="Click to show/hide more information." name="attr_technique_revised_toggle_notes" />
@@ -3352,7 +3380,9 @@
             						<span class="sheet-tooltip">
             						    Success, critical success, fail, and critical fail<br />
             						    notes will be added to roll results.<br />
-            						    You can add macros to these notes.
+            						    You can add macros to these notes. <br />
+										The width of these note boxes are set to help you<br />
+										visualize what it will look like in chat.
             						</span>
     						    </div>
 						        <textarea name="attr_skill_success_note" title="Macro table name: repeating_skills. Field name: skill_success_note"></textarea>
@@ -3907,12 +3937,21 @@
     						    <input type="hidden" name="attr_melee_skill_row_id_toggle" value="0" />
     							<input type="text" name="attr_melee_skill_row_id" title="Macro table name: repeating_melee. Field name: melee_skill_row_id" />
     						</div>
-    						<div class="cell custom-checkbox">
-    							<label>
-    							    Mod: 
-    							    <input type="number" value="0" name="attr_melee_skill_row_id_modifier" class="inline" title="Macro table name: repeating_melee. Field name: melee_skill_row_id_modifier" />
-    							</label>
-    						</div>
+							
+							<div class="cell">
+								<div class="popup">MOD: </div>
+								<div class="tooltip tooltip-skills-ref">
+									Modifier applied to skill level.<br />
+									Can be a positive or a negative number.<br />
+									Examples include a bonus from a Talent,<br />
+									default from another Skill or Technique,<br />
+									a piece of equipment, or a Perk.
+								</div>
+							</div>
+							<div class="cell">
+								<input type="number" value="0" name="attr_melee_skill_row_id_modifier" class="inline" title="Macro table name: repeating_melee. Field name: melee_skill_row_id_modifier" />
+							</div>
+					
     						<div class="cell col-wide">
     							<input type="hidden" name="attr_melee_skill_row_id_message" value="" />
     							<b>Name:</b><span name="attr_melee_skill_row_id_message"></span>
@@ -4174,12 +4213,19 @@
     						    <input type="hidden" name="attr_ranged_skill_row_id_toggle" value="0" />
     							<input type="text" name="attr_ranged_skill_row_id" title="Macro table name: repeating_ranged. Field name: ranged_skill_row_id" />
     						</div>
-    						<div class="cell custom-checkbox">
-    							<label>
-    							    Mod: 
-    							    <input type="number" value="0" name="attr_ranged_skill_row_id_modifier" class="inline" title="Macro table name: repeating_ranged. Field name: ranged_skill_row_id_modifier" />
-    							</label>
-    						</div>
+							<div class="cell">
+								<div class="popup">MOD: </div>
+								<div class="tooltip tooltip-skills-ref">
+									Modifier applied to skill level.<br />
+									Can be a positive or a negative number.<br />
+									Examples include a bonus from a Talent,<br />
+									default from another Skill or Technique,<br />
+									a piece of equipment, or a Perk.
+								</div>
+							</div>
+							<div class="cell">
+								<input type="number" value="0" name="attr_ranged_skill_row_id_modifier" class="inline" title="Macro table name: repeating_ranged. Field name: ranged_skill_row_id_modifier" />
+							</div>
     						<div class="cell col-wide">
     							<input type="hidden" name="attr_ranged_skill_row_id_message" value="" />
     							<b>Name:</b><span name="attr_ranged_skill_row_id_message"></span>
@@ -4997,7 +5043,15 @@
 				<div class="sheet-header">
 					<div class="sheet-cell sheet-col0">Inventory</div>
 					<div class="sheet-cell sheet-col1">TL</div>
-					<div class="sheet-cell sheet-col2">Ref</div>
+					<div class="cell col2">
+						<div class="popup">Ref</div>
+						<div class="tooltip tooltip-spell-ref">
+							Reference to book and page numbers.<br />
+							Examples:<br />
+							B238 = GURPS Basic, Page 238<br />
+							PU2:126 = Power-Ups 2. Page 126<br />
+						</div>
+					</div>
 					<div class="sheet-cell sheet-col3">
 						<div class="sheet-popup">On</div>
 						<span class="sheet-tooltip">
@@ -5176,7 +5230,11 @@
 					<div class="sheet-cell sheet-col4">
 					    <div class="popup">Mod</div>
 						<div class="tooltip">
-						   Modifier
+							Modifier applied to skill level.<br />
+							Can be a positive or a negative number.<br />
+							Examples include a bonus from a Talent,<br />
+							default from another Skill or Technique,<br />
+							a piece of equipment, or a Perk.
 						</div>
 					 </div>
 					<div class="sheet-cell sheet-col5">
@@ -5363,7 +5421,9 @@
             						<span class="sheet-tooltip">
             						    Success, critical success, fail, and critical fail<br />
             						    notes will be added to roll results.<br />
-            						    You can add macros to these notes.
+            						    You can add macros to these notes. <br />
+										The width of these note boxes are set to help you<br />
+										visualize what it will look like in chat. 
             						</span>
     						    </div>
 						        <textarea name="attr_spell_success_note" title="Macro table name: repeating_spells. Field name: spell_success_note"></textarea>
@@ -5446,8 +5506,8 @@
 		
 	<h3>Known Issues</h3>
 	<ul>
-		<li>The original issue was that you were unable to delete a Technique – UPDATED 02/18/2020</li>
-		<li>We now have a Revised Techniques table. See update Version 2.2.0 notes. We will continue to revise this Table until we are 100% satisfied it works as intended. The main issue is the complexity of some Techniques and how to enter them into this Table.</li>
+		<li>The original issue was that you were unable to delete a Technique – UPDATED 03/03/2020</li>
+		<li>We now have a Revised Techniques table. See update Version 2.2.0 notes. We will continue to revise this Table until we are 100% satisfied it works as intended. The main issue is the complexity of some Techniques and how to enter them into this Table. Modifications to the Techniques (Revised) table will be forthcoming almost every other week.</li>
 	</ul>
 
 		<h3>Note to authors</h3>
@@ -5473,8 +5533,18 @@
 	<p>Pull Request: <span name="attr_latest_changes"></span></p>
 
 	<ul>
+		<li>Changes, Fixes, and Adds made by Mike W (UserID: 1414610)</li>
+		<li>Added some new ToolTips – Cosmetic Only.</li>
+		<li>Changed width of Weapon and Damage Notes fields, under Melee and Raged Attacks, to be more readable – Cosmetic Only.</li>
+	</ul>
+
+	<h4>Version 2.2.2</h4>
+	
+	<p>Pull Request: 02/25/2020</p>
+
+	<ul>
 		<li>Fix spelling errors.</li>
-		<li>Rolltemplate: To avoid confusion, critical failure will only display the critical failure not.</li>
+		<li>Rolltemplate: To avoid confusion, critical failure will only display the Critical Failure not regular Failure as well.</li>
 		<li>Traits tab: Combine Perks & Quirks into one row. Less scrolling and hopefully improved interface.</li>
 		<li>General tab: Move lifting section below HP, ER Pools, expand notes section. <b>NOTE:</b> This required changing the coding location of several sections on this tab.</li>
 	</ul>
@@ -7081,9 +7151,9 @@ See notes for weapon.</textarea>
 
 	var noop = function () {}; // do nothing.
 
-	var version = "2.2.2";
+	var version = "2.2.3";
 	
-	var latestChangesDate = "02/25/2020";
+	var latestChangesDate = "03/03/2020";
 
 	var modCascade = true;
 	
