AD&D1e - image links upated

--- a/AD&D_1E/1ESheet.html
+++ b/AD&D_1E/1ESheet.html
@@ -3,7 +3,7 @@
 	<input type="radio" class="sheet-useBackground" style="display:none;" name="attr_background" value="2" />
 	<div class="sheet-background">
 		<div class="sheet-wrapper">
-			<div class="sheet-center" style="padding-top:10px;"><img src="https://i.imgur.com/I7XAra9.png" /></div>
+			<div class="sheet-center" style="padding-top:10px;"><img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/AD%26D_1E/images/logo.png" /></div>
 
 			<div class="sheet-personal_attributes" style="margin:-40px 0 10px 0;">
 				<div class="sheet-header">PERSONAL ATTRIBUTES</div>
