Ship pg2 Images
Ship pg2 Images for layout
Plus renaming newship style to shipConfig

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1879,11 +1879,11 @@
 			<span class="vital largePips"></span>
 		</div>
 	</div>
-	<!-- ------------------- -->
-	<!--  NEW SHIP SECTION   -->
-	<!-- ------------------- -->
+	<!-- ------------------------- -->
+	<!--      SHIP Congiguration   -->
+	<!-- ------------------------- -->
 
-	<div class="row1050 newship">
+	<div class="row1050 shipConfig">
 		<h2 class="subtitlesFull">Ship Configuration</h2>
 
 		<div class="colorselector">
@@ -1899,11 +1899,8 @@
 				<option value="5">Sm.Label vertical</option>
 				<option value="6">Me.Label vertical</option>
 			</select>
-
 		</div>
-
 		<div class="flex-row">
-
 			<!-- bow -->
 			<div class="ship-block">
 				<label class="ship-label">Bow</label>
@@ -3672,7 +3669,6 @@
 			</div>
 
 		</div>
-
 	</div>
 
 	<!-- ------------------- -->
