--- a/ButterflyAspect/ButterflyAspect.html
+++ b/ButterflyAspect/ButterflyAspect.html
@@ -77,7 +77,7 @@
 				<input type="number" name="attr_Na" value="1" min="1" class="sheet-number-20" />
 			</div>
 			<div class="sheet-float sheet-formular">
-				<button type="roll" class="sheet-small-button" name="roll_FeRoll" value="@{abilityroll} versucht sich in Fernkampf [[(@{Fe}})d10 + ?{Modifier?|0]]">Fernkampf</button>
+				<button type="roll" class="sheet-small-button" name="roll_FeRoll" value="@{abilityroll} versucht sich in Fernkampf [[(@{Fe}})d10 + ?{Modifier?|0}]]">Fernkampf</button>
 				<input type="number" name="attr_Fe" value="1" min="1" class="sheet-number-20" />
 			</div>
 			<div class="sheet-float sheet-formular">
@@ -138,12 +138,23 @@
 
 			<div class="repcontainer" data-groupname="repeating_basicskills">
 				<div class="repitem" data-reprowid="-LqmJZp6DZSuTu37ytv5">
-					<div><input class="sheet-textcenter" type="text" name="attr_statikskillname" value="Ressourcen" /></div>
+					<div><input class="sheet-textcenter" type="text" name="attr_statikskillname1" value="Ansehen" /></div>
 					<div>-</div>
-					<div><input type="number" name="attr_statikskill" value="0"></div>
-					<div><input type="number" name="attr_statikskill_mod" value="0"></div>
+					<div><input type="number" name="attr_statikskill1" value="0"></div>
+					<div><input type="number" name="attr_statikskill1_mod" value="0"></div>
 					<div>-</div>
-					<div><button type="roll" name="roll_statikskill" value="@{abilityroll} würfelt @{statikskillname} mit dem Ergebniss [[(@{statikskill})d10!! + @{statikskill_mod} + ?{Modifier?|0}]]" class="btn ui-draggable"></button></div>
+					<div><button type="roll" name="roll_statikskill1" value="@{abilityroll} würfelt @{statikskillname1} mit dem Ergebnis [[(@{statikskill1})d10!! + @{statikskill1_mod} + ?{Modifier?|0}]]" class="btn ui-draggable"></button></div>
+				</div>
+			</div>
+
+			<div class="repcontainer" data-groupname="repeating_basicskills">
+				<div class="repitem" data-reprowid="-LqmJZp6DZSuTu37ytv5">
+					<div><input class="sheet-textcenter" type="text" name="attr_statikskillname2" value="Vermögen" /></div>
+					<div>-</div>
+					<div><input type="number" name="attr_statikskill2" value="0"></div>
+					<div><input type="number" name="attr_statikskill2_mod" value="0"></div>
+					<div>-</div>
+					<div><button type="roll" name="roll_statikskill2" value="@{abilityroll2} würfelt @{statikskillname2} mit dem Ergebnis [[(@{statikskill2})d10!! + @{statikskill2_mod} + ?{Modifier?|0}]]" class="btn ui-draggable"></button></div>
 				</div>
 			</div>
 
@@ -164,7 +175,7 @@
 				<div><input type="number" name="attr_skill" value="0" /></div>
 				<div><input type="number" name="attr_skill_mod" value="0" /></div>
 				<div><input type="number" name="attr_pp" value="0" /></div>
-				<div><button type="roll" name="roll_skill" value="@{abilityroll} würfelt @{skillname} mit dem Ergebniss [[(@{attribut} + @{skill})d10!!kh@{attribut} + @{skill_mod} + ?{Modifier?|0}]]"></button></div>
+				<div><button type="roll" name="roll_skill" value="@{abilityroll} würfelt @{skillname} mit dem Ergebnis [[(@{attribut} + @{skill})d10!!kh@{attribut} + @{skill_mod} + ?{Modifier?|0}]]"></button></div>
 			</fieldset>
 		</div>
 	</div>
