Finished Ship Sheet
Finished 2nd side of the ship sheet

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1402,9 +1402,9 @@
 		<div class="flag">Flag:</div>
 		<div class="flagType"><input type="text" name="attr_Flag" class="full"></div>
 		<div class="tactics">Tactics:</div>
-		<div class="tacticList"><input type="text" name="attr_Tactics" class="full"/></div>
+		<div class="tacticList"><input type="text" name="attr_Tactics" class="full" /></div>
 		<div class="captain">Captain:</div>
-		<div class="captainName"><input type="text" name="attr_Captain" class="full"/></div>
+		<div class="captainName"><input type="text" name="attr_Captain" class="full" /></div>
 	</div>
 
 	<!--Ship Systems-->
@@ -3675,52 +3675,52 @@
 	<!--       CARGO         -->
 	<!-- ------------------- -->
 
-	<div class="row1450">
-		<!--Cargo-->
-		<div class="columnLeft">
-			<h2 class="subtitlesFull">Cargo</h2>
-			<table class="fullPage">
-				<tr>
-					<td>
-						Supply:
-					</td>
-					<td>
-						<input type="number" name="attr_supply" min="0" /> tonnes
-					</td>
-					<td>&nbsp;</td>
-					<td>
-						Complex Materials:
-					</td>
-					<td>
-						<input type="number" name="attr_complexMaterials" min="0" /> tonnes
-					</td>
-				</tr>
-			</table>
-			<br />
-			<div class="fullPage">
-				<h3>Assets & Trade Goods</h3>
-				<fieldset class="repeating_shipCargo">
-					<input type="text" name="attr_shipCargo" class="threeQuarters" />
-					<input type="number" min="0" name="attr_shipCargoRV" />RV
-					<input type="number" min="0" name="attr_shipCargoTonnage" /> tonnes
-				</fieldset>
-			</div>
+	<div class="row1450 resourceWidget">
+		<!--Resources-->
+		<div class="resource">
+			<div class="resourceTitle">Complex Materials</div>
+			<div class="resourceBoxPlace"><input type="number" name="attr_complexMaterials" min="0" class="resourceBox" /></div>
+			<div class="resourceTonnes">tonnes</div>
+		</div>
+		<div class="resource">
+			<div class="resourceTitle">Supply</div>
+			<div class="resourceBoxPlace"><input type="number" name="attr_supply" min="0" value="0" class="resourceBox" /></div>
+			<div class="resourceTonnes">tonnes</div>
+		</div>
+		<div class="resource">
+			<div class="resourceTitle">Total</div>
+			<div class="resourceBoxPlace"><input type="number" name="attr_totalResource" min="0" class="resourceBox" /></div>
+			<div class="resourceTonnes">tonnes</div>
 		</div>
 	</div>
-	<div class="row1950">
-		<h2 class="subtitlesFull">Letter of Marque</h2>
-		<!--Letter of Marque-->
-		<div class="columnLeft">
-			<div class="fullPage">
-				<p>Attention: Local Port Authority,</p>
-				<br />
-				<p>
-					<textarea class="letter" name="attr_statementContract"></textarea>
-				</p>
-				<br />
-				<p><input type="text" class="half" name="attr_patronCommissionaire" /> - Patron Commissionaire</p>
-				<br />
-			</div>
+	<!--Cargo-->
+	<div class="row1575 cargo">
+		<div class="cargoTitle">Assets & Trade Goods</div>
+		<div class="cargoWorth">Worth</div>
+		<div class="cargoTonnage">Tonnage</div>
+		<div class="cargoBox">
+			<fieldset class="repeating_shipCargo">
+				<input type="text" name="attr_shipCargo" class="fourFifths" />
+				<input type="number" min="0" name="attr_shipCargoRV" />
+				<input type="number" min="0" name="attr_shipCargoTonnage" />
+			</fieldset>
+		</div>
+	</div>
+	<!--Letter of Marque-->
+	<div class="row1450 column475 letterOfMarque">
+		<div class="letterOfMarqueTitle">Letter of Marque</div>
+		<div class="letterOfMarqueGreeting">Attention: Local Port Authority,</div>
+		<div class="letterOfMarqueBoxPlace"><textarea class="letter" name="attr_statementContract"></textarea></div>
+		<div class="letterOfMarquePatron"><input type="text" class="full" name="attr_patronCommissionaire" /> </div>
+		<div class="letterOfMarquePatronTitle">Patron Commissionaire</div>
+	</div>
+	<!--Notes-->
+	<div class="row1890 column475 notes">
+		<div class="cargoTitle">Notes</div>
+		<div class="cargoBox">
+			<fieldset class="repeating_notes">
+				<input type="text" name="attr_shipNotes" class="full" />
+			</fieldset>
 		</div>
 	</div>
 </div>
