Updated the Crew Aspects to Grid
Altered the Crew sheet aspects to use Grid

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -27,223 +27,62 @@
 
 <div class="sheetType crewmemberSheet">
 	<!--ID -->
-	<div class="rowTop">
-		<div class="columnLeft">
-			<div class="halfPage">
-				<h2>
-					Alias: <input type="text" name="attr_name" class="most aspect">
-				</h2>
-			</div>
+	<div class="crewTop">
+		<div class="crewID">
+			<h1 class="alias">Alias:</h1>
+			<div class="aliasName"><input type="text" name="attr_name" class="full aspect" /></div>
+			<h1 class="player">Player:</h1>
+			<div class="playerName"><input type="text" name="attr_nameplayer" class="full aspect" /></div>
 		</div>
-		<div class="column450">
-			<div class="halfPage">
-				<h3>
-					Player: <input type="text" name="attr_nameplayer" class="most aspect">
-				</h3>
-			</div>
-		</div>
-	</div>
-	<!--Description-->
-	<div class="row275">
-		<div class="columnLeft">
-			<table class="halfPage">
-				<tr>
-					<th>Description</th>
-				</tr>
-				<tr>
-					<td>Charateristics:</td>
-					<td>
-						<input type="text" name="attr_Characteristics" class="full aspect" />
-					</td>
-				</tr>
-				<tr>
-					<td>Pronouns:</td>
-					<td>
-						<input type="text" name="attr_GenderIndentity" class="full aspect" />
-					</td>
-				</tr>
-				<tr>
-					<td>Attitude:</td>
-					<td>
-						<input type="text" name="attr_Attitude" class="full aspect" />
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="column450">
-			<table class="halfPage">
-				<tr>
-					<th><br /></th>
-				</tr>
-				<tr>
-					<td>Style:</td>
-					<td>
-						<input type="text" name="attr_Style" class="full aspect" />
-					</td>
-				</tr>
-				<tr>
-					<td>Ship Suit:</td>
-					<td>
-						<input type="text" name="attr_ShipSuit" class="full aspect" />
-					</td>
-				</tr>
-				<tr>
-					<td>PAN:</td>
-					<td>
-						<input type="text" name="attr_PAN" class="full aspect" />
-					</td>
-				</tr>
-			</table>
-		</div>
-	</div>
-	<!--Aspects-->
-	<div class="row375">
-		<div class="columnLeft">
-			<table class="halfPage">
-				<tr>
-					<th>Aspects</th>
-				</tr>
-				<!--Department A-->
-				<tr>
-					<td>
-						<input type="text" name="attr_DepartmentA" class="full start">
-					</td>
-					<td>
-						<input type="text" name="attr_StationA" class="full aspect">
-					</td>
-				</tr>
-				<!--DepartmentZ-->
-				<tr>
-					<td>
-						<input type="text" name="attr_DepartmentZ" class="full start">
-					</td>
-					<td>
-						<input type="text" name="attr_StationZ" class="full aspect">
-					</td>
-				</tr>
-				<!--Wartime Faction-->
-				<tr>
-					<td>
-						Wartime Faction:
-					</td>
-					<td>
-						<input type="text" name="attr_Wartime_Faction" class="full aspect" />
-					</td>
-				</tr>
-				<!--Background-->
-				<tr>
-					<td>
-						Background:
-					</td>
-					<td>
-						<input type="text" name="attr_Background" class="full aspect">
-					</td>
-				</tr>
-				<!--Recruitment-->
-				<tr>
-					<td>
-						Recruitment:
-					</td>
-					<td>
-						<input type="text" name="attr_Recruitment" class="full aspect">
-					</td>
-				</tr>
-				<!--Drive-->
-				<tr>
-					<td>
-						Drive:
-					</td>
-					<td>
-						<input type="text" name="attr_Drive" class="full aspect">
-					</td>
-				</tr>
-			</table>
+		<!--Aspects-->
+		<div class="crewAspects">
+			<!--Department A-->
+			<div class="departmentA"><input type="text" name="attr_DepartmentA" class="threeQuarters"> Station: </div>
+			<div class="stationA"><input type="text" name="attr_StationA" class="full aspect"></div>
+			<!--DepartmentB-->
+			<div class="departmentB"><input type="text" name="attr_DepartmentZ" class="threeQuarters"> Station: </div>
+			<div class="stationB"><input type="text" name="attr_StationZ" class="full aspect"></div>
+			<!--Wartime Faction-->
+			<div>Wartime Faction:</div>
+			<div><input type="text" name="attr_Wartime_Faction" class="full aspect" /></div>
+			<!--Background-->
+			<div>Background:</div>
+			<div><input type="text" name="attr_Background" class="full aspect"></div>
+			<!--Recruitment-->
+			<div>Recruitment:</div>
+			<div class=""><input type="text" name="attr_Recruitment" class="full aspect"></div>
+			<!--Drive-->
+			<div>Drive:</div>
+			<div><input type="text" name="attr_Drive" class="full aspect"></div>
 		</div>
 		<!--Species -->
-		<div class="column450">
-			<table class="halfPage">
-				<tr>
-					<th>Species:</th>
-					<td><input type="text" name="attr_Species" class="full aspect" /></td>
-				</tr>
-			</table>
-			<table class="halfPage">
-				<tr>
-					<td>
-						Size:
-					</td>
-					<td>
-						<input type="text" name="attr_Size" class="full aspect">
-					</td>
-					<td>
-						Cutis:
-					</td>
-					<td>
-						<input type="text" name="attr_Cutis" class="full aspect">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Build:
-					</td>
-					<td>
-						<input type="text" name="attr_Build" class="full aspect">
-					</td>
-					<td>
-						Adnexa:
-					</td>
-					<td>
-						<input type="text" name="attr_Adnexa" class="full aspect">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Height/Mass:
-					</td>
-					<td>
-						<input type="text" name="attr_HeightMass" class="full aspect" />
-					</td>
-					<td>
-						Consumption:
-					</td>
-					<td>
-						<input type="text" name="attr_Consumption" class="full aspect">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Limbs:
-					</td>
-					<td>
-						<input type="text" name="attr_Limbs" class="full aspect" />
-					</td>
-					<td>
-						Respiration:
-					</td>
-					<td>
-						<input type="text" name="attr_Respiration" class="full aspect">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Manipulators:
-					</td>
-					<td>
-						<input type="text" name="attr_Manipulators" class="full aspect" />
-					</td>
-					<td>
-						Reproduction:
-					</td>
-					<td>
-						<input type="text" name="attr_Parturition" class="full aspect">
-					</td>
-				</tr>
-			</table>
+		<div class="species">
+			<div class="speciesTitle">Species:</div>
+			<div class="speciesName"><input type="text" name="attr_Species" class="full aspect" /></div>
+			<div class="">Size:</div>
+			<div class=""><input type="text" name="attr_Size" class="full aspect" /></div>
+			<div class="">Cutis:</div>
+			<div class=""><input type="text" name="attr_Cutis" class="full aspect" /></div>
+			<div class="">Build:</div>
+			<div class=""><input type="text" name="attr_Build" class="full aspect" /></div>
+			<div class="">Adnexa:</div>
+			<div class=""><input type="text" name="attr_Adnexa" class="full aspect" /></div>
+			<div class="">Height/Mass:</div>
+			<div class=""><input type="text" name="attr_HeightMass" class="full aspect" /></div>
+			<div class="">Consumption:</div>
+			<div class=""><input type="text" name="attr_Consumption" class="full aspect"></div>
+			<div class="">Limbs:</div>
+			<div class=""><input type="text" name="attr_Limbs" class="full aspect" /></div>
+			<div class="">Respiration:</div>
+			<div class=""><input type="text" name="attr_Respiration" class="full aspect" /></div>
+			<div class="">Manipulators:</div>
+			<div class=""><input type="text" name="attr_Manipulators" class="full aspect" /></div>
+			<div class="">Reproduction:</div>
+			<div class=""><input type="text" name="attr_Parturition" class="full aspect"></div>
 		</div>
 	</div>
 	<!--Skills -->
-	<div class="row500">
-		<br />
+	<div class="row350">
 		<h2 class="subtitlesFull">Skills</h2>
 		<!--Comms-->
 		<div class="columnLeft">
@@ -1319,6 +1158,59 @@
 			</div>
 		</div>
 	</div>
+	<!--Description-->
+	<div class="row1900">
+		<div class="columnLeft">
+			<table class="halfPage">
+				<tr>
+					<th>Description</th>
+				</tr>
+				<tr>
+					<td>Charateristics:</td>
+					<td>
+						<input type="text" name="attr_Characteristics" class="full aspect" />
+					</td>
+				</tr>
+				<tr>
+					<td>Pronouns:</td>
+					<td>
+						<input type="text" name="attr_GenderIndentity" class="full aspect" />
+					</td>
+				</tr>
+				<tr>
+					<td>Attitude:</td>
+					<td>
+						<input type="text" name="attr_Attitude" class="full aspect" />
+					</td>
+				</tr>
+			</table>
+		</div>
+		<div class="column450">
+			<table class="halfPage">
+				<tr>
+					<th><br /></th>
+				</tr>
+				<tr>
+					<td>Style:</td>
+					<td>
+						<input type="text" name="attr_Style" class="full aspect" />
+					</td>
+				</tr>
+				<tr>
+					<td>Ship Suit:</td>
+					<td>
+						<input type="text" name="attr_ShipSuit" class="full aspect" />
+					</td>
+				</tr>
+				<tr>
+					<td>PAN:</td>
+					<td>
+						<input type="text" name="attr_PAN" class="full aspect" />
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 	<div class="row2000">
 		<!-- Language -->
 		<div class="columnLeft">
@@ -1393,7 +1285,7 @@
 <div class="sheetType shipSheet">
 
 	<!--Ship Aspects-->
-	<div class="rowTop columnLeft aspects">
+	<div class="rowTop columnLeft shipAspects">
 		<div class="designation">Designation:</div>
 		<div class="designationPrefix"><input type="text" name="attr_designationPrefix" class="full" /></div>
 		<div class="designationName"><input type="text" name="attr_name" class="full" /></div>
