Tweaks to Condition Column
Upkeep set up
Pathogens set up

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -549,7 +549,7 @@
 		</div>
 		<!--Condition Slots-->
 		<div class="crewConditions">
-			<div>Conditions Slots</div>
+			<div class="conditionsTitle">Conditions Slots</div>
 			<div><input type="checkbox" class="checkbox" name="attr_resilienceAugmentationSlot" value="active" /><span></span></div>
 			<div class="right">Resilience[5](Augment)</div>
 			<div><input type="checkbox" class="resilienceConditionSlot" name="attr_resilienceAugmentationCondition" /><span></span></div>
@@ -570,29 +570,13 @@
 			</div>
 		</div>
 		<div class="pathogen">
-			<h3>Pathogens</h3>
-			<table class="thirdPage">
-				<tr>
-					<td>
-						Name:
-					</td>
-					<td>
-						<input type="text" name="attr_pathogenName" class="full" />
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Symptoms:
-					</td>
-					<td>
-						<input type="text" name="attr_pathogenSymptoms" class="full" />
-					</td>
-				</tr>
-			</table>
+			<div class="conditionsTitle">Pathogen:</div>
+			<div class="pathogenName"><input type="text" name="attr_pathogenName" class="full" /></div>
+			<div class="pathogenBox"><textarea name="attr_pathogenSymptoms" class="full letter" ></textarea></div>
 		</div>
 		<div class="upkeep">
-			<div>Upkeep:</div>
-			<div> <input type="number" min="0" name="attr_upkeep" class="upkeepBox"/> </div>
+			<div class="conditionsTitle">Upkeep:</div>
+			<div class="upkeepBoxPlacement"> <input type="number" min="0" name="attr_upkeep" class="upkeepBox" /> </div>
 		</div>
 	</div>
 	<!--Crew Kit-->
