--- a/Les Chants de Loss/LCDL.html
+++ b/Les Chants de Loss/LCDL.html
@@ -112,7 +112,7 @@
 				<td class="subtitle"><h4>Total</h4></td>
 				<td style="width:33px;"><input type="number" name="attr_Experience" value="0" min="0"/></td>
 				<td class="subtitle"><h4>R&#233;serve</h4></td>
-				<td style="width:33px;"><input type="number" name="attr_Experience" value="0" min="0"/></td>
+				<td style="width:33px;"><input type="number" name="attr_Experience_Reserve" value="0" min="0"/></td>
 			</tr>
 		</table>
 		<div class="marginTopBlock">
@@ -147,7 +147,7 @@
 		<div class="blockInspirationL">
 			<div class="blockInspiration">
 				Honneur
-				<input type="number" name="attr_hon" value="0" min="0"/>
+				<input type="number" name="attr_inspi_hon" value="0" min="0"/>
 				<div class="blockPts">
 					<input type="checkbox" value="1" name="attr_PointsHonneur1" class="marginPtsR"/>
 					<input type="checkbox" value="1" name="attr_PointsHonneur2" class="marginPtsR"/>
@@ -158,7 +158,7 @@
 			</div>
 			<div class="blockInspiration">
 				Sagesse
-				<input type="number" name="attr_hon" value="0" min="0"/>
+				<input type="number" name="attr_inspi_sag" value="0" min="0"/>
 				<div class="blockPts">
 					<input type="checkbox" value="1" name="attr_PointsSagesse1" class="marginPtsR"/>
 					<input type="checkbox" value="1" name="attr_PointsSagesse2" class="marginPtsR" />
@@ -171,7 +171,7 @@
 		<div class="blockInspirationR">
 			<div class="blockInspiration">
 				Courage
-				<input type="number" name="attr_hon" value="0" min="0"/>
+				<input type="number" name="attr_inspi_cour" value="0" min="0"/>
 				<div class="blockPts">
 					<input type="checkbox" value="1" name="attr_PointsCourage1" class="marginPtsR"/>
 					<input type="checkbox" value="1" name="attr_PointsCourage2" class="marginPtsR"/>
@@ -182,7 +182,7 @@
 			</div>
 			<div class="blockInspiration">
 				Foi
-				<input type="number" name="attr_hon" value="0" min="0"/>
+				<input type="number" name="attr_inspi_foi" value="0" min="0"/>
 				<div class="blockPts">
 					<input type="checkbox" value="1" name="attr_PointsFoi1" class="marginPtsR"/>
 					<input type="checkbox" value="1" name="attr_PointsFoi2" class="marginPtsR" />
@@ -603,7 +603,7 @@
 					<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Les%20Chants%20de%20Loss/images/courage.png" alt="Courage" class="talent"/>
 					LE CORPS
 				</h4></div>
-				<input type="number" name="attr_Corps" value="0" min="0" style="margin-top:-3px;" class="talentInputNum"/>
+				<input type="number" name="attr_Courage" value="0" min="0" style="margin-top:-3px;" class="talentInputNum"/>
 			</div>
 			<div class="talentSubBlock">
 				<input type="checkbox" name="attr_hideCombat" class="hideBlock" value="1" /><span></span>
@@ -837,7 +837,7 @@
 					<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Les%20Chants%20de%20Loss/images/sagesse.png" alt="Sagesse" class="talent"/>
 					L'ESPRIT
 				</h4></div>
-				<input type="number" name="attr_Corps" value="0" min="0" style="margin-top:-3px;" class="talentInputNum"/>
+				<input type="number" name="attr_Sagesse" value="0" min="0" style="margin-top:-3px;" class="talentInputNum"/>
 			</div>
 			<div class="talentSubBlock">
 				<input type="checkbox" name="attr_hideSciences" class="hideBlock" value="1" /><span></span>
@@ -1071,18 +1071,7 @@
 					<div class="talentSubColumn width45">
 						<input type="number" value="0" name="attr_scoreOrientation" class="talentInputNum"/>
 					</div>
-				</div>
-				<div class="hideBlock">
-					<div class="talentSubColumn width110">
-						<button type="roll" name="roll_jetOrientation" value="@{typeJet}&{template:talent} {{name=Orientation}} {{spe=@{speOrientation}}} {{resultat=[[{1d10!}kh2+@{scoreOrientation}+@{Honneur}+?{Trait|Instinct,@{valueinstinct}|Esprit,@{valueesprit}|Pouvoir,@{valuepouvoir}|Empathie,@{valueempathie}|Agilit&#233;,@{valueagilite}|Puissance,@{valuepuissance}}-[[@{malus}]]+@{modDivers} ]]}} {{mod=[[@{modDivers}]]}} {{malus=[[@{malus}]]}}" title="Orientation" class="bTalent"></button>
-					</div>
-					<div class="talentSubColumn width114">
-						<input type="text" value="" name="attr_speOrientation" class="talentInputSpe width114" />
-					</div>
-					<div class="talentSubColumn width45">
-						<input type="number" value="0" name="attr_scoreOrientation" class="talentInputNum"/>
-					</div>
-				</div>
+				</div>			
 				<div class="hideBlock">
 					<div class="talentSubColumn width110">
 						<button type="roll" name="roll_jetPister" value="@{typeJet}&{template:talent} {{name=Pister}} {{spe=@{spePister}}} {{resultat=[[{1d10!}kh2+@{scorePister}+@{Honneur}+?{Trait|Empathie,@{valueempathie}|Pouvoir,@{valuepouvoir}|Instinct,@{valueinstinct}|Esprit,@{valueesprit}|Agilit&#233;,@{valueagilite}|Puissance,@{valuepuissance}}-[[@{malus}]]+@{modDivers} ]]}} {{mod=[[@{modDivers}]]}} {{malus=[[@{malus}]]}}" title="Pister" class="bTalent"></button>
@@ -1125,7 +1114,7 @@
 					LA FOI
 					<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Les%20Chants%20de%20Loss/images/foi.png" alt="Foi" class="talent"/>
 					LE DIVIN
-					<input type="number" name="attr_Corps" value="0" min="0" style="margin-top:-3px;"/>
+					<input type="number" name="attr_Foi" value="0" min="0" style="margin-top:-3px;"/>
 				</h4></div>
 				
 			</div>
