Tweaked crew conditions and updated images
New lighter fill on images
Added Patches images
Built subgrids for crew conditions and patches

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -548,34 +548,48 @@
 			</div>
 		</div>
 		<!--Condition Slots-->
-		<div class="crewConditions">
+		<div class="crewConditionsWidget">
 			<div class="conditionsTitle">Conditions Slots</div>
-			<div><input type="checkbox" class="checkbox" name="attr_resilienceAugmentationSlot" value="active" /><span></span></div>
-			<div class="right">Resilience[5](Augment)</div>
-			<div><input type="checkbox" class="resilienceConditionSlot" name="attr_resilienceAugmentationCondition" /><span></span></div>
-			<div><input type="checkbox" class="checkbox" name="attr_resilienceSlot" value="Natural" checked="checked" disabled="disabled" /><span></span></div>
-			<div class="right">Resilience[5]</div>
-			<div><input type="checkbox" class="resilienceConditionSlot" name="attr_resilienceCondition" value="1" /><span></span></div>
-			<div><input type="checkbox" class="checkbox" name="attr_integritySlot" value="Natural" checked="checked" disabled="disabled" /><span></span></div>
-			<div class="right">Integrity[5]</div>
-			<div><input type="checkbox" class="integertyConditionSlot" name="attr_IntegrityCondition" value="1" /><span></span></div>
-			<div><input type="checkbox" class="checkbox" name="attr_vitalitySlot" value="Natural" checked="checked" disabled="disabled" /><span></span></div>
-			<div class="right">Vitality[5]</div>
-			<div><input type="checkbox" class="vitalityConditionSlot" name="attr_vitalityCondition" value="1" /><span></span></div>
-			<div>Patches:</div>
-			<div>
-				<input type="checkbox" class="patch" name="attr_patch1" value="1" /><span></span>
-				<input type="checkbox" class="patch" name="attr_patch2" value="1" /><span></span>
-				<input type="checkbox" class="patch" name="attr_patch3" value="1" /><span></span>
+
+			<div class="conditionCheckbox conditionLineAugment"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceAugmentationSlot" value="active" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineAugment">Resilience[5](Augment)</div>
+			<div class="conditionCheckbox conditionLineResilience"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceSlot" value="Natural" checked="checked" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineResilience">Resilience[5]</div>
+			<div class="conditionCheckbox conditionLineIntegrity"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_integritySlot" value="Natural" checked="checked" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineIntegrity">Integrity[5]</div>
+			<div class="conditionCheckbox conditionLineVitality"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_vitalitySlot" value="Natural" checked="checked" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineVitality">Vitality[5]</div>
+			<div class="crewConditions">
+				<input type="checkbox" class="resiliance-slot-2 hideCheckbox largeCheckbox" name="attr_resilienceAugmentationCondition" value="1" />
+				<span class="resiliance resiliance-slot-2 largePips"></span>
+
+				<input type="checkbox" class="resiliance-slot-1 hideCheckbox largeCheckbox" name="attr_resilienceCondition" value="1" />
+				<span class="resiliance resiliance-slot-1 largePips"></span>
+
+				<input type="checkbox" class="integrity hideCheckbox largeCheckbox" name="attr_IntegrityCondition" value="1" />
+				<span class="integrity largePips"></span>
+
+				<input type="checkbox" class="vital hideCheckbox largeCheckbox" name="attr_vitalityCondition" value="1" />
+				<span class="vital largePips"></span>
+			</div>
+			<div class="crewPatchTitle">Patches:</div>
+			<div class="crewPatches">
+				<input type="checkbox" class="patch1 hideCheckbox largeCheckbox" name="attr_patch1" value="1" />
+				<span class="resiliance patch1 largePips"></span>
+				<input type="checkbox" class="patch2 hideCheckbox largeCheckbox" name="attr_patch2" value="1" />
+				<span class="resiliance patch2 largePips"></span>
+				<input type="checkbox" class="patch3 hideCheckbox largeCheckbox" name="attr_patch3" value="1" />
+				<span class="resiliance patch3 largePips"></span>
 			</div>
 		</div>
+		
 		<div class="pathogen">
-			<div class="conditionsTitle">Pathogen:</div>
+			<div class="upkeepPathogenTitle">Pathogen:</div>
 			<div class="pathogenName"><input type="text" name="attr_pathogenName" class="full" /></div>
-			<div class="pathogenBox"><textarea name="attr_pathogenSymptoms" class="full letter" ></textarea></div>
+			<div class="pathogenBox"><textarea name="attr_pathogenSymptoms" class="full letter"></textarea></div>
 		</div>
 		<div class="upkeep">
-			<div class="conditionsTitle">Upkeep:</div>
+			<div class="upkeepPathogenTitle">Upkeep:</div>
 			<div class="upkeepBoxPlacement"> <input type="number" min="0" name="attr_upkeep" class="upkeepBox" /> </div>
 		</div>
 	</div>
@@ -1521,10 +1535,10 @@
 		<div class="launch-bay-tug-conditions">
 			<input class="resiliance-slot-2 hideCheckbox largeCheckbox" type="checkbox" name="attr_tugResilienceSlot2Condition" value="1" />
 			<span class="resiliance resiliance-slot-2 largePips "></span>
-			<input class='resiliance-slot-1 hideCheckbox largeCheckbox' type="checkbox" name="attr_tugResilienceSlot1Condition" /><span class="resiliance resiliance-slot-1 largePips">
-			</span>
-			<input class='integrity hideCheckbox largeCheckbox' type="checkbox" name="attr_tugIntegrityCondition" value="1" /><span class="integrity largePips">
-			</span>
+			<input class='resiliance-slot-1 hideCheckbox largeCheckbox' type="checkbox" name="attr_tugResilienceSlot1Condition" />
+			<span class="resiliance resiliance-slot-1 largePips"></span>
+			<input class='integrity hideCheckbox largeCheckbox' type="checkbox" name="attr_tugIntegrityCondition" value="1" />
+			<span class="integrity largePips"></span>
 			<input class='vital hideCheckbox largeCheckbox' type="checkbox" name="attr_tugVitalityCondition" value="1" />
 			<span class="vital largePips"></span>
 		</div>
