Updated Crew Integrity
Updated Crew Integrity image
Added crewIntegrity to html and css

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -567,7 +567,7 @@
 				<span class="resiliance resiliance-slot-1 largePips"></span>
 
 				<input type="checkbox" class="integrity hideCheckbox largeCheckbox" name="attr_IntegrityCondition" value="1" />
-				<span class="integrity largePips"></span>
+				<span class="crewIntegrity largePips"></span>
 
 				<input type="checkbox" class="vital hideCheckbox largeCheckbox" name="attr_vitalityCondition" value="1" />
 				<span class="vital largePips"></span>
