--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -574,12 +574,12 @@
 			</div>
 			<div class="crewPatchTitle">Patches:</div>
 			<div class="crewPatches">
-				<input type="checkbox" class="patch1 hideCheckbox largeCheckbox" name="attr_patch1" value="1" />
-				<span class="resiliance patch1 largePips"></span>
-				<input type="checkbox" class="patch2 hideCheckbox largeCheckbox" name="attr_patch2" value="1" />
-				<span class="resiliance patch2 largePips"></span>
-				<input type="checkbox" class="patch3 hideCheckbox largeCheckbox" name="attr_patch3" value="1" />
-				<span class="resiliance patch3 largePips"></span>
+				<input type="checkbox" class="patch1 hideCheckbox mediumCheckbox" name="attr_patch1" value="1" />
+				<span class="patch patch1 mediumPips"></span>
+				<input type="checkbox" class="patch2 hideCheckbox mediumCheckbox" name="attr_patch2" value="1" />
+				<span class="patch patch2 mediumPips"></span>
+				<input type="checkbox" class="patch3 hideCheckbox mediumCheckbox" name="attr_patch3" value="1" />
+				<span class="patch patch3 mediumPips"></span>
 			</div>
 		</div>
 		
