--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -14687,6 +14687,10 @@
         <tr>
             <td colspan="2" class="sheet-subheader">{{header}}</td>
         </tr>
+        {{#oracle}}
+            <td class="sheet-oracle-dice"><span>{{oracle}}</span></td>
+            <td class="sheet-oracle-table-text">{{value}}</td>
+        {{/oracle}}
         {{#action}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{action}}</span></td>
