Progress on CrewKit
Got all images in... Its a little big.

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -550,7 +550,6 @@
 		<!--Condition Slots-->
 		<div class="crewConditionsWidget">
 			<div class="conditionsTitle">Conditions Slots</div>
-
 			<div class="conditionCheckbox conditionLineAugment"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceAugmentationSlot" value="active" /><span class="inlinePips hexSelector"></span></div>
 			<div class="conditionType conditionLineAugment">Resilience[5](Augment)</div>
 			<div class="conditionCheckbox conditionLineResilience"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceSlot" value="Natural" checked="checked" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
@@ -562,13 +561,10 @@
 			<div class="crewConditions">
 				<input type="checkbox" class="resiliance-slot-2 hideCheckbox largeCheckbox" name="attr_resilienceAugmentationCondition" value="1" />
 				<span class="resiliance resiliance-slot-2 largePips"></span>
-
 				<input type="checkbox" class="resiliance-slot-1 hideCheckbox largeCheckbox" name="attr_resilienceCondition" value="1" />
 				<span class="resiliance resiliance-slot-1 largePips"></span>
-
 				<input type="checkbox" class="integrity hideCheckbox largeCheckbox" name="attr_IntegrityCondition" value="1" />
 				<span class="crewIntegrity largePips"></span>
-
 				<input type="checkbox" class="vital hideCheckbox largeCheckbox" name="attr_vitalityCondition" value="1" />
 				<span class="vital largePips"></span>
 			</div>
@@ -802,11 +798,10 @@
 			</div>
 			<!--Augmentation -->
 			<div class="Augments">
-				<div class="thirdPage">
-					<h3>Augmentation</h3>
-					<p>Anagathics: Inhibit aging & natural death</p>
-					<p>Rebreather: Alter respirant to appropriate</p>
-					<h4>Traits</h4>
+					<div class="systemTitle">Augmentation</div>
+					<div class="systemDetail">Anagathics: Inhibit aging & natural death</div>
+					<div class="systemDetail">Rebreather: Alter respirant to appropriate</div>
+					<div systemListTitle>Augment</div>
 					<div class="thirdPage">
 						<fieldset class="repeating_Traits">
 							<input type="text" name="attr_Trait" class="threeQuarters">
@@ -820,12 +815,11 @@
 						<h4>Trivial Trait</h4>
 						<input type="text" name="attr_trivalTrait" lass="threeQuarters">
 					</div>
-				</div>
 			</div>
 			<!--EVA Suit-->
 			<div class="EVASuit">
-				<h3>EVA Suit</h3>
-				<h4>Ship Suit</h4>
+				<div class="systemTitle">EVA Suit</div>
+				<div class="systemDetail">Ship Suit</div>
 				<table class="thirdPage">
 					<tr>
 						<td>&nbsp;</td>
