--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -14687,10 +14687,10 @@
         <tr>
             <td colspan="2" class="sheet-subheader">{{header}}</td>
         </tr>
-        {{#oracle}}
-            <td class="sheet-oracle-dice"><span>{{oracle}}</span></td>
+        {{#custom-oracle}}
+            <td class="sheet-oracle-dice"><span>{{custom-oracle}}</span></td>
             <td class="sheet-oracle-table-text">{{value}}</td>
-        {{/oracle}}
+        {{/custom-oracle}}
         {{#action}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{action}}</span></td>
