[Les Chants de Loss] other bug correction
the input field for Legende had the same attribute name that experience. I renamed it to attr_legende.

--- a/Les Chants de Loss/LCDL.html
+++ b/Les Chants de Loss/LCDL.html
@@ -118,7 +118,7 @@
 		<div class="marginTopBlock">
 			<div>
 				<div class="titre borderRightNoRadius titreNoRight"><h4 class="titreNoRight">LEGENDE</h4></div>
-				<input type="number" name="attr_Experience" value="0" min="0" style="margin-top:-3px;"/>
+				<input type="number" name="attr_Legende" value="0" min="0" style="margin-top:-3px;"/>
 			</div>
 			<div style="font-size:11px;">
 				Points de L&#233;gende
